@@ -5,12 +5,13 @@
 (define (brew-one-figure grob fig-music)
   "Brew a single column for a music figure"
   (let* (
+	 (chain (Font_interface::get_property_alist_chain grob))
 	 (mf (ly:get-font grob (cons  '((font-family . music))
-				      Font_interface::get_property_alist_chain
+				      chain 
 				      )))
 	 (nf (ly:get-font grob
-			  (cons  '((font-family . number))
-				 Font_interface::get_property_alist_chain)))
+			  (cons '((font-family . number))
+				chain)))
 	 (mol (ly:make-molecule  '() '(0 . 0) '(0 . 1.0)))
 	 (fig  (ly:get-mus-property fig-music 'figure))
 	 (acc  (ly:get-mus-property fig-music 'alteration))
