@@ -119,8 +119,7 @@
 	(Y-offset-callbacks . (,Self_alignment_interface::aligned_on_self))
 	(direction . 1)
 	(font-family . number)
-	(font-magnification . 0.6)
-	(font-relative-size . -3)
+	(font-relative-size . -1)
 	(padding . 0.1)
 	(kern . 0.2)
 	(thickness . 1.0)
