@@ -1,5 +1,7 @@
 2003-03-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
+	* scm/bass-figure.scm (brew-one-figure): bugfix for large bass figures 
+
 	* scm/new-markup.scm (brew-new-markup-molecule): robustness: don't
 	crash when processing '() markup
 
